refactor: 기물의 이동 경로에 목적지를 포함하지 않도록 수정